# HAT-Lba

./: .gitignore  CMakeLists.txt  README.md  README.md.back  README.md.back-1
c/: Makefile  Session.vim  a.out
c/builds/: test_dot  test_gram_schmidt  test_malloc
c/includes/: matrix.h  qsoe_float_helper.h  rational.h
c/src/: matrix.c  matrix.h  qsoe_float_helper.c  rational.c
c/test/: new_matrix.c  rational.c  test_babai.c  test_basis.c  test_dot.c  test_malloc.c  test_solve.c
docs/: README.md
hardware/: Makefile  README.md
hardware/demos/: test_add_sub.vvp  test_fixed_round.vvp  test_rational_round.vvp
hardware/hdl/: rat_sub.v  simplify.v
hardware/hdl/fixed/: round.v
hardware/hdl/rat/: add.v  add_sub.v  div.v  mod_div.v  mul.v  mul_div.v  rat_add.v  rat_mul.v  round.v  sub.v
hardware/sim/fixed/: test_round.v
hardware/sim/rat/: test_add.v  test_add_sub.v  test_div.v  test_mul.v  test_mul_div.v  test_round.v  test_sub.v
hardware/test/: mul_test  test_add.vvp  test_add_sub.vvp  test_div.vvp  test_mul.vvp  test_mul_div.vvp  test_round.vvp  test_sub.vvp
python/: .gitignore  README.md  setup
python/babai/src/: .gitignore  Session.vim  lattice.py  test.py
python/src/: example.py  lattice.py
software/: Makefile  README.md  config.h  ggh.h  matrix.h
software/builds/: bulk_fixed  fix_test_decomp  fix_test_dot  flt_test_dbg_decrypt  flt_test_decrypt  flt_test_encrypt  flt_test_gen_public  flt_test_ggh_suite  flt_test_malloc  flt_test_mxm  flt_test_mxm_solve  flt_test_solve  rat_test_gram_schmidt  rat_test_project  rat_test_simplify  test_decrypt
software/c_fixed/: Makefile
software/c_fixed/builds/: test_babai  test_basis
software/c_fixed/includes/: config.h  fixed_approximation.h  fpa.h  fpa_matrix.h  matrix.h
software/c_fixed/output/: results
software/c_fixed/src/: fixed_approximation.c  fpa.c  fpa_matrix.c  matrix.c
software/c_fixed/test/: test_babai.c  test_basis.c  test_decomp.c  test_det.c  test_dot.c  test_fixed.c  test_gram_schmidt.c  test_malloc.c  test_mxm.c  test_mxm_solve.c  test_project.c  test_solve.c  test_unimod.c
software/c_float/: .gitignore  Makefile  README.md
software/c_float/builds/: float_test_gen_private  float_test_gen_public  float_test_mxm  float_test_mxv  float_test_transpose  float_test_unimod
software/c_float/includes/: ggh.h  matrix.h
software/c_float/src/: ggh.c  matrix.c  qsoe_float_helper.c  rational.c
software/c_float/test/: test_babai.c  test_dbg_decrypt.c  test_decomp.c  test_decrypt.c  test_det.c  test_dot.c  test_encrypt.c  test_gen_private.c  test_gen_public.c  test_ggh.c  test_ggh_suite.c  test_gram_schmidt.c  test_malloc.c  test_mxm.c  test_mxm_solve.c  test_mxv.c  test_project.c  test_solve.c  test_transpose.c  test_unimod.c
software/c_rational/: Makefile
software/c_rational/includes/: matrix.h  qsoe_float_helper.h  rational.h
software/c_rational/src/: matrix.c  rational.c
software/c_rational/test/: test_babai.c  test_basis.c  test_decomp.c  test_dot.c  test_gram_schmidt.c  test_malloc.c  test_project.c  test_rational.c  test_simplify.c  test_solve.c
software/demos/: fix_10R_gs  fix_20R_gs  fix_5R_gs  fix_test_gram_schmidt  fix_test_gram_schmidt_10  fix_test_gram_schmidt_32  fix_test_project_10  fix_test_project_20  fix_test_project_32  flt_gs  flt_test_gram_schmidt  flt_test_project  ggh  rat_gs
software/includes/: mmem.h
software/prototype/babai/src/: example.py  rational.py
software/src/: ggh.c  matrix.c  mmem.c
software/test/: bulk_fixed.c  test_decrypt.c
